infra/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-doc-custom
  namespace: doc-custom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-doc-custom
  template:
    metadata:
      labels:
        app: ai-doc-custom
    spec:
      containers:
        - name: ai-doc-custom-container
          image: ghcr.io/oondemand/api-integracao-gpt:${IMAGE_TAG}
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "0.1"
            limits:
              memory: "256Mi"
              cpu: "0.2"
